[gd_scene load_steps=24 format=4 uid="uid://xdxqb042o61d"]

[ext_resource type="Script" uid="uid://y1obk07adpka" path="res://world.gd" id="1_aqk2v"]
[ext_resource type="Texture2D" uid="uid://cncx1s04r23ps" path="res://assets/images/floor-tiles-Sheet.png" id="1_fj7yv"]
[ext_resource type="PackedScene" uid="uid://dfd7hkdv8jnit" path="res://player.tscn" id="2_fj7yv"]
[ext_resource type="Texture2D" uid="uid://x7pnyd2rse23" path="res://assets/images/furniture-sheet.png" id="3_dwbse"]
[ext_resource type="AudioStream" uid="uid://b8owkmo6pji2t" path="res://assets/sounds/main-theme.mp3" id="4_036b0"]
[ext_resource type="Texture2D" uid="uid://urm2k5x0w46y" path="res://assets/images/finish-tile.png" id="4_ic0uy"]
[ext_resource type="Shader" uid="uid://cpsallo3jvfaf" path="res://world.gdshader" id="5_036b0"]
[ext_resource type="PackedScene" uid="uid://b4vpgbgb3ugw" path="res://teal_collectable.tscn" id="8_ic0uy"]
[ext_resource type="PackedScene" uid="uid://dai81pdimkmea" path="res://pink_collectable.tscn" id="9_k3n1d"]
[ext_resource type="PackedScene" uid="uid://bmotk40lxgtct" path="res://purple_collectable.tscn" id="10_2o6r5"]
[ext_resource type="PackedScene" uid="uid://cutlp75wiayab" path="res://score_ui.tscn" id="10_wse8f"]
[ext_resource type="PackedScene" uid="uid://cwa3wmmgb4po0" path="res://level_finish.tscn" id="12_k3n1d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tlwt5"]
texture = ExtResource("1_fj7yv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_036b0"]
physics_layer_0/collision_layer = 16
sources/1 = SubResource("TileSetAtlasSource_tlwt5")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dwbse"]
texture = ExtResource("3_dwbse")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
9:3/0 = 0
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/z_index = -5
2:4/0 = 0
2:4/0/z_index = -5
1:5/0 = 0
1:5/0/z_index = -5
2:5/0 = 0
2:5/0/z_index = -5
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
2:8/0 = 0
12:8/0 = 0
13:8/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
12:9/0 = 0
13:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0

[sub_resource type="TileSet" id="TileSet_pkg7o"]
physics_layer_0/collision_layer = 16
sources/0 = SubResource("TileSetAtlasSource_dwbse")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gbfbk"]
texture = ExtResource("3_dwbse")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
1:4/0 = 0
2:4/0 = 0
1:5/0 = 0
2:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
13:5/0 = 0
14:5/0 = 0
3:6/0 = 0
4:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
13:6/0 = 0
14:6/0 = 0
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:8/0 = 0
13:8/0 = 0
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
13:9/0 = 0
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:12/0 = 0
1:12/0/z_index = -5
2:12/0 = 0
2:12/0/z_index = -5
3:12/0 = 0
3:12/0/z_index = -5
4:12/0 = 0
4:12/0/z_index = -5
5:12/0 = 0
5:12/0/z_index = -5
6:12/0 = 0
6:12/0/z_index = -5

[sub_resource type="TileSet" id="TileSet_dwbse"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_gbfbk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ioo17"]
texture = ExtResource("3_dwbse")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
13:3/0 = 0
1:4/0 = 0
2:4/0 = 0
1:5/0 = 0
2:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
13:5/0 = 0
14:5/0 = 0
3:6/0 = 0
4:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
13:6/0 = 0
14:6/0 = 0
1:8/0 = 0
2:8/0 = 0
12:8/0 = 0
13:8/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
12:9/0 = 0
13:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0

[sub_resource type="TileSet" id="TileSet_wse8f"]
physics_layer_0/collision_layer = 8
sources/0 = SubResource("TileSetAtlasSource_ioo17")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k3n1d"]
texture = ExtResource("4_ic0uy")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_2o6r5"]
physics_layer_0/collision_layer = 16
sources/0 = SubResource("TileSetAtlasSource_k3n1d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pkg7o"]
shader = ExtResource("5_036b0")
shader_parameter/speed = 0.3
shader_parameter/distortion = 3.0
shader_parameter/saturation = 0.8
shader_parameter/brightness = 0.9

[node name="World" type="Node2D"]
script = ExtResource("1_aqk2v")

[node name="FloorTiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAA4AAQAAAAAAAAABAA4AAQABAAAAAAACAA4AAQACAAAAAAADAA4AAQABAAAAAAAEAA4AAQABAAAAAAAFAA4AAQABAAAAAAAGAA4AAQACAAAAAAAHAA4AAQABAAAAAAAIAA4AAQACAAAAAAAJAA4AAQACAAAAAAAKAA4AAQABAAAAAAALAA4AAQACAAAAAAAMAA4AAQABAAAAAAANAA4AAQABAAAAAAAOAA4AAQACAAAAAAAPAA4AAQABAAAAAAAQAA4AAQACAAAAAAARAA4AAQACAAAAAAASAA4AAQABAAAAAAATAA4AAQABAAAAAAAUAA4AAQABAAAAAAAVAA4AAQABAAAAAAAWAA4AAQABAAAAAAAXAA4AAQABAAAAAAAYAA4AAQABAAAAAAAZAA4AAQABAAAAAAAaAA4AAQABAAAAAAAbAA4AAQABAAAAAAAcAA4AAQABAAAAAAAdAA4AAQABAAAAAAAlAA4AAQABAAAAAAAmAA4AAQABAAAAAAAnAA4AAQABAAAAAAAoAA4AAQABAAAAAAApAA4AAQABAAAAAAAqAA4AAQABAAAAAAArAA4AAQABAAAAAAAsAA4AAQABAAAAAAAtAA4AAQABAAAAAAAuAA4AAQABAAAAAAAvAA4AAQABAAAAAAAwAA4AAQABAAAAAAAeAA4AAQABAAAAAAAfAA4AAQABAAAAAAAgAA4AAQABAAAAAAAhAA4AAQABAAAAAAAiAA4AAQABAAAAAAAjAA4AAQABAAAAAAAkAA4AAQABAAAAAAAxAA4AAQABAAAAAAAyAA4AAQABAAAAAAAzAA4AAQABAAAAAAA0AA4AAQABAAAAAAA1AA4AAQABAAAAAAA2AA4AAQABAAAAAAA3AA4AAQABAAAAAAA4AA4AAQABAAAAAAA/AA4AAQABAAAAAABAAA4AAQABAAAAAABBAA4AAQABAAAAAABCAA4AAQABAAAAAABDAA4AAQABAAAAAABEAA4AAQABAAAAAABFAA4AAQABAAAAAABGAA4AAQABAAAAAABHAA4AAQABAAAAAABIAA4AAQABAAAAAABJAA4AAQABAAAAAAA5AA4AAQABAAAAAAA6AA4AAQABAAAAAAA7AA4AAQABAAAAAAA8AA4AAQABAAAAAAA9AA4AAQABAAAAAAA+AA4AAQABAAAAAABKAA4AAQABAAAAAABLAA4AAQABAAAAAABMAA4AAQABAAAAAABNAA4AAQABAAAAAABOAA4AAQABAAAAAABPAA4AAQABAAAAAABQAA4AAQABAAAAAABRAA4AAQABAAAAAABSAA4AAQABAAAAAABTAA4AAQABAAAAAABUAA4AAQABAAAAAABVAA4AAQABAAAAAABWAA4AAQABAAAAAABXAA4AAQABAAAAAABYAA4AAQABAAAAAABZAA4AAQABAAAAAABaAA4AAQABAAAAAABbAA4AAQABAAAAAABcAA4AAQABAAAAAABdAA4AAQABAAAAAABeAA4AAQABAAAAAABfAA4AAQABAAAAAABgAA4AAQABAAAAAABhAA4AAQABAAAAAABiAA4AAQABAAAAAABjAA4AAQABAAAAAABkAA4AAQABAAAAAABlAA4AAQABAAAAAABmAA4AAQABAAAAAABnAA4AAQABAAAAAABoAA4AAQABAAAAAABpAA4AAQABAAAAAABqAA4AAQABAAAAAABrAA4AAQABAAAAAABsAA4AAQABAAAAAABtAA4AAQABAAAAAABuAA4AAQABAAAAAABvAA4AAQABAAAAAABwAA4AAQABAAAAAABxAA4AAQABAAAAAAByAA4AAQABAAAAAABzAA4AAQABAAAAAAB0AA4AAQABAAAAAAB1AA4AAQABAAAAAAB2AA4AAQABAAAAAAB3AA4AAQABAAAAAAB4AA4AAQABAAAAAAB5AA4AAQABAAAAAAB6AA4AAQABAAAAAAB7AA4AAQABAAAAAAB8AA4AAQABAAAAAAB9AA4AAQABAAAAAAB+AA4AAQABAAAAAAB/AA4AAQABAAAAAACAAA4AAQABAAAAAACBAA4AAQABAAAAAACCAA4AAQABAAAAAACDAA4AAQABAAAAAACEAA4AAQABAAAAAACFAA4AAQABAAAAAACGAA4AAQABAAAAAACHAA4AAQABAAAAAACIAA4AAQABAAAAAACJAA4AAQABAAAAAACKAA4AAQABAAAAAACLAA4AAQABAAAAAACMAA4AAQABAAAAAACNAA4AAQABAAAAAACOAA4AAQABAAAAAACPAA4AAQABAAAAAACQAA4AAQABAAAAAACRAA4AAQABAAAAAACSAA4AAQABAAAAAACTAA4AAQABAAAAAACUAA4AAQABAAAAAACVAA4AAQABAAAAAACWAA4AAQABAAAAAACXAA4AAQABAAAAAACYAA4AAQABAAAAAACZAA4AAQABAAAAAACaAA4AAQABAAAAAACbAA4AAQABAAAAAACcAA4AAQABAAAAAACdAA4AAQABAAAAAACeAA4AAQABAAAAAACfAA4AAQABAAAAAACgAA4AAQABAAAAAAChAA4AAQABAAAAAACiAA4AAQABAAAAAACjAA4AAQABAAAAAACkAA4AAQABAAAAAAClAA4AAQABAAAAAACmAA4AAQABAAAAAACnAA4AAQABAAAAAACoAA4AAQABAAAAAACpAA4AAQABAAAAAACqAA4AAQABAAAAAACrAA4AAQABAAAAAACsAA4AAQABAAAAAACtAA4AAQABAAAAAACuAA4AAQABAAAAAACvAA4AAQABAAAAAACwAA4AAQABAAAAAACxAA4AAQABAAAAAACyAA4AAQABAAAAAACzAA4AAQABAAAAAAC0AA4AAQABAAAAAAC1AA4AAQABAAAAAAC2AA4AAQABAAAAAAC3AA4AAQABAAAAAAC4AA4AAQABAAAAAAC5AA4AAQABAAAAAAC6AA4AAQABAAAAAAC7AA4AAQABAAAAAAC8AA4AAQABAAAAAAC9AA4AAQABAAAAAAC+AA4AAQABAAAAAAC/AA4AAQABAAAAAADAAA4AAQABAAAAAADBAA4AAQABAAAAAADCAA4AAQABAAAAAADDAA4AAQABAAAAAADEAA4AAQABAAAAAADFAA4AAQABAAAAAADGAA4AAQABAAAAAADHAA4AAQABAAAAAADIAA4AAQABAAAAAADJAA4AAQABAAAAAADKAA4AAQABAAAAAADLAA4AAQABAAAAAADMAA4AAQABAAAAAADNAA4AAQABAAAAAADOAA4AAQABAAAAAADPAA4AAQABAAAAAADQAA4AAQABAAAAAADRAA4AAQABAAAAAADSAA4AAQABAAAAAADTAA4AAQABAAAAAADUAA4AAQABAAAAAADVAA4AAQABAAAAAADWAA4AAQABAAAAAADXAA4AAQABAAAAAADYAA4AAQABAAAAAADZAA4AAQABAAAAAADaAA4AAQABAAAAAADbAA4AAQABAAAAAADcAA4AAQABAAAAAADdAA4AAQABAAAAAADeAA4AAQABAAAAAADfAA4AAQABAAAAAADgAA4AAQABAAAAAADhAA4AAQABAAAAAADiAA4AAQABAAAAAADjAA4AAQABAAAAAADkAA4AAQABAAAAAADlAA4AAQABAAAAAADmAA4AAQABAAAAAADnAA4AAQABAAAAAADoAA4AAQABAAAAAADpAA4AAQABAAAAAADqAA4AAQABAAAAAADrAA4AAQABAAAAAADsAA4AAQABAAAAAADtAA4AAQABAAAAAADuAA4AAQABAAAAAADvAA4AAQABAAAAAADwAA4AAQABAAAAAADxAA4AAQABAAAAAADyAA4AAQABAAAAAADzAA4AAQABAAAAAAD0AA4AAQABAAAAAAD1AA4AAQABAAAAAAD2AA4AAQABAAAAAAD3AA4AAQABAAAAAAD4AA4AAQABAAAAAAD5AA4AAQABAAAAAAD6AA4AAQABAAAAAAD7AA4AAQACAAAAAAD8AA4AAQACAAAAAAD9AA4AAQACAAAAAAD+AA4AAQABAAAAAAD/AA4AAQABAAAAAAAAAQ4AAQABAAAAAAABAQ4AAQABAAAAAAACAQ4AAQABAAAAAAADAQ4AAQABAAAAAAAEAQ4AAQABAAAAAAAFAQ4AAQABAAAAAAAGAQ4AAQABAAAAAAAHAQ4AAQABAAAAAAAIAQ4AAQABAAAAAAAJAQ4AAQABAAAAAAAKAQ4AAQABAAAAAAALAQ4AAQABAAAAAAAMAQ4AAQABAAAAAAANAQ4AAQABAAAAAAAOAQ4AAQABAAAAAAAPAQ4AAQABAAAAAAAQAQ4AAQABAAAAAAARAQ4AAQABAAAAAAASAQ4AAQABAAAAAAATAQ4AAQABAAAAAAAUAQ4AAQABAAAAAAAVAQ4AAQABAAAAAAAWAQ4AAQABAAAAAAAXAQ4AAQABAAAAAAAYAQ4AAQABAAAAAAAZAQ4AAQABAAAAAAAcAQ4AAQABAAAAAAAdAQ4AAQABAAAAAAAeAQ4AAQABAAAAAAAfAQ4AAQABAAAAAAAgAQ4AAQABAAAAAAAhAQ4AAQABAAAAAAAaAQ4AAQABAAAAAAAbAQ4AAQABAAAAAAAiAQ4AAQABAAAAAAAjAQ4AAQABAAAAAAAkAQ4AAQABAAAAAAAlAQ4AAQABAAAAAAAmAQ4AAQABAAAAAAAnAQ4AAQABAAAAAAAoAQ4AAQABAAAAAAApAQ4AAQABAAAAAAAqAQ4AAQABAAAAAAArAQ4AAQABAAAAAAAsAQ4AAQABAAAAAAAtAQ4AAQABAAAAAAAuAQ4AAQABAAAAAAAvAQ4AAQABAAAAAAAwAQ4AAQABAAAAAAAxAQ4AAQABAAAAAAAyAQ4AAQABAAAAAAAzAQ4AAQABAAAAAAA0AQ4AAQABAAAAAAA1AQ4AAQABAAAAAAA2AQ4AAQABAAAAAAA3AQ4AAQABAAAAAAA4AQ4AAQABAAAAAAA5AQ4AAQABAAAAAAA6AQ4AAQABAAAAAAA7AQ4AAQABAAAAAAA8AQ4AAQABAAAAAAA9AQ4AAQABAAAAAAA+AQ4AAQABAAAAAABCAQ4AAQABAAAAAABDAQ4AAQABAAAAAABEAQ4AAQABAAAAAABFAQ4AAQABAAAAAABGAQ4AAQABAAAAAABHAQ4AAQABAAAAAABIAQ4AAQABAAAAAABJAQ4AAQABAAAAAABKAQ4AAQABAAAAAAA/AQ4AAQABAAAAAABAAQ4AAQABAAAAAABBAQ4AAQABAAAAAABLAQ4AAQABAAAAAABMAQ4AAQABAAAAAABNAQ4AAQABAAAAAABOAQ4AAQABAAAAAABPAQ4AAQABAAAAAABQAQ4AAQABAAAAAABRAQ4AAQABAAAAAABSAQ4AAQABAAAAAABTAQ4AAQABAAAAAABUAQ4AAQABAAAAAABVAQ4AAQABAAAAAABWAQ4AAQABAAAAAABXAQ4AAQABAAAAAABYAQ4AAQABAAAAAABZAQ4AAQABAAAAAABaAQ4AAQABAAAAAABbAQ4AAQABAAAAAABcAQ4AAQABAAAAAABdAQ4AAQABAAAAAABeAQ4AAQABAAAAAABfAQ4AAQABAAAAAABgAQ4AAQABAAAAAABhAQ4AAQABAAAAAABiAQ4AAQABAAAAAABjAQ4AAQABAAAAAABkAQ4AAQABAAAAAABlAQ4AAQABAAAAAABmAQ4AAQABAAAAAABnAQ4AAQABAAAAAABoAQ4AAQABAAAAAABpAQ4AAQABAAAAAABqAQ4AAQABAAAAAABrAQ4AAQABAAAAAABsAQ4AAQABAAAAAABtAQ4AAQABAAAAAABuAQ4AAQABAAAAAABvAQ4AAQABAAAAAABwAQ4AAQABAAAAAABxAQ4AAQABAAAAAAByAQ4AAQABAAAAAABzAQ4AAQABAAAAAAB0AQ4AAQABAAAAAAB1AQ4AAQABAAAAAAB2AQ4AAQABAAAAAAB3AQ4AAQABAAAAAAB4AQ4AAQABAAAAAAB/AQ4AAQABAAAAAACAAQ4AAQABAAAAAACBAQ4AAQABAAAAAACCAQ4AAQABAAAAAACDAQ4AAQABAAAAAACEAQ4AAQABAAAAAACFAQ4AAQABAAAAAACGAQ4AAQABAAAAAACHAQ4AAQABAAAAAACIAQ4AAQABAAAAAACJAQ4AAQABAAAAAACKAQ4AAQABAAAAAACLAQ4AAQABAAAAAACMAQ4AAQABAAAAAACNAQ4AAQABAAAAAACOAQ4AAQABAAAAAACPAQ4AAQABAAAAAACQAQ4AAQABAAAAAACRAQ4AAQABAAAAAACSAQ4AAQABAAAAAACTAQ4AAQABAAAAAAB5AQ4AAQABAAAAAAB6AQ4AAQABAAAAAAB7AQ4AAQABAAAAAAB8AQ4AAQABAAAAAAB9AQ4AAQABAAAAAAB+AQ4AAQABAAAAAAAWAAwAAAAEAAkAAAAWAA0AAAAEAAoAAAAXAAwAAAAFAAkAAAAXAA0AAAAFAAoAAAAYAAwAAAAGAAkAAAAYAA0AAAAGAAoAAAAZAAwAAAAHAAkAAAAZAA0AAAAHAAoAAAAaAAwAAAAIAAkAAAAaAA0AAAAIAAoAAAAbAAwAAAAJAAkAAAAbAA0AAAAJAAoAAAAWAAsAAAABAAwAAAAXAAsAAAACAAwAAAAYAAsAAAADAAwAAAAZAAsAAAAEAAwAAAAaAAsAAAAFAAwAAAAbAAsAAAAGAAwAAAAkAAwAAAAHAAUAAAAkAA0AAAAHAAYAAAAlAAwAAAAIAAUAAAAlAA0AAAAIAAYAAAAmAAwAAAAJAAUAAAAmAA0AAAAJAAYAAAAnAAwAAAAKAAUAAAAnAA0AAAAKAAYAAAAtAAwAAAAMAAgAAAAtAA0AAAAMAAkAAAAuAAwAAAANAAgAAAAuAA0AAAANAAkAAAA1AAsAAAABAAQAAAA1AAwAAAABAAUAAAA2AAsAAAACAAQAAAA2AAwAAAACAAUAAAA1AA0AAAADAAYAAAA2AA0AAAAEAAYAAAA8AAwAAAAEAAIAAAA8AA0AAAAEAAMAAAA9AAwAAAAFAAIAAAA+AAwAAAAGAAIAAAA/AAwAAAAHAAIAAABAAAwAAAAIAAIAAABBAAwAAAAJAAIAAABBAA0AAAAJAAMAAABHAAwAAAAMAAIAAABHAA0AAAAMAAMAAABIAAwAAAANAAIAAABIAA0AAAANAAMAAABRAAoAAAAAAAAAAABRAAsAAAAAAAEAAABRAAwAAAAAAAIAAABRAA0AAAAAAAMAAABSAAoAAAABAAAAAABSAAsAAAABAAEAAABSAAwAAAABAAIAAABSAA0AAAABAAMAAABbAAwAAAANAAUAAABbAA0AAAANAAYAAABcAAwAAAAOAAUAAABcAA0AAAAOAAYAAABEAAwAAAAMAAgAAABEAA0AAAAMAAkAAABFAAwAAAANAAgAAABFAA0AAAANAAkAAABNAAwAAAABAAgAAABNAA0AAAABAAkAAABOAAwAAAACAAgAAABOAA0AAAACAAkAAABYAAwAAAAMAAgAAABYAA0AAAAMAAkAAABZAAwAAAANAAgAAABZAA0AAAANAAkAAAA=")
tile_set = SubResource("TileSet_036b0")

[node name="Obstacles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAPAAwAAAANAAUAAAAPAA0AAAANAAYAAAAQAAwAAAAOAAUAAAAQAA0AAAAOAAYAAAA=")
tile_set = SubResource("TileSet_pkg7o")

[node name="Bouncers" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAhAAwAAAABAAgAAAAhAA0AAAABAAkAAAAiAAwAAAACAAgAAAAiAA0AAAACAAkAAAAsAAwAAAAEAAkAAAAsAA0AAAAEAAoAAAAtAAwAAAAFAAkAAAAtAA0AAAAFAAoAAAAuAAwAAAAGAAkAAAAuAA0AAAAGAAoAAAAvAAwAAAAHAAkAAAAvAA0AAAAHAAoAAAAwAAwAAAAIAAkAAAAwAA0AAAAIAAoAAAAxAAwAAAAJAAkAAAAxAA0AAAAJAAoAAAAsAAsAAAABAAwAAAAtAAsAAAACAAwAAAAuAAsAAAADAAwAAAAvAAsAAAAEAAwAAAAwAAsAAAAFAAwAAAAxAAsAAAAGAAwAAAA=")
tile_set = SubResource("TileSet_dwbse")

[node name="Sliders" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAYAAwAAAAEAAIAAAAYAA0AAAAEAAMAAAAZAAwAAAAFAAIAAAAaAAwAAAAGAAIAAAAbAAwAAAAHAAIAAAAcAAwAAAAIAAIAAAAdAAwAAAAJAAIAAAAdAA0AAAAJAAMAAAA=")
tile_set = SubResource("TileSet_wse8f")

[node name="Finish" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AACUAQ4AAAAAAAAAAACVAQ4AAAAAAAAAAACWAQ4AAAAAAAAAAACXAQ4AAAAAAAAAAACYAQ4AAAAAAAAAAACZAQ4AAAAAAAAAAACaAQ4AAAAAAAAAAACbAQ4AAAAAAAAAAACcAQ4AAAAAAAAAAACdAQ4AAAAAAAAAAACeAQ4AAAAAAAAAAACfAQ4AAAAAAAAAAACgAQ4AAAAAAAAAAAChAQ4AAAAAAAAAAACiAQ4AAAAAAAAAAACjAQ4AAAAAAAAAAACkAQ4AAAAAAAAAAAClAQ4AAAAAAAAAAACmAQ4AAAAAAAAAAACnAQ4AAAAAAAAAAACoAQ4AAAAAAAAAAACoAQ0AAAAAAAAAAACoAQwAAAAAAAAAAACoAQsAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_2o6r5")

[node name="Player" parent="." instance=ExtResource("2_fj7yv")]
position = Vector2(59, 210)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_036b0")
volume_db = -4.452
autoplay = true

[node name="BgLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BgLayer"]
z_index = -999
material = SubResource("ShaderMaterial_pkg7o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TealCollectable" parent="." groups=["collectables"] instance=ExtResource("8_ic0uy")]
position = Vector2(1154, 209)

[node name="TealCollectable2" parent="." groups=["collectables"] instance=ExtResource("8_ic0uy")]
position = Vector2(1566, 208)

[node name="TealCollectable3" parent="." groups=["collectables"] instance=ExtResource("8_ic0uy")]
position = Vector2(1424, 209)

[node name="PinkCollectable" parent="." groups=["collectables"] instance=ExtResource("9_k3n1d")]
position = Vector2(999, 207)

[node name="PinkCollectable2" parent="." groups=["collectables"] instance=ExtResource("9_k3n1d")]
position = Vector2(1298, 209)

[node name="PurpleCollectable" parent="." groups=["collectables"] instance=ExtResource("10_2o6r5")]
position = Vector2(856, 207)

[node name="ScoreUI" parent="." instance=ExtResource("10_wse8f")]

[node name="LevelFinish" parent="." instance=ExtResource("12_k3n1d")]
position = Vector2(6465, 184)

[connection signal="level_completed" from="LevelFinish" to="." method="_on_level_completed"]
